--- a/project.config.json
+++ b/project.config.json
@@ -20,6 +20,6 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx05209f9a131e28b1",
+  "appid": "wx189e189ac1785738",
   "editorSetting": {}
 }
